--- a/samples/apps/SmartLauncher/wwwroot/sampleapp/launch.html
+++ b/samples/apps/SmartLauncher/wwwroot/sampleapp/launch.html
@@ -9,9 +9,10 @@
     var redirectUri = launchUri.replace("launch.html","index.html");
     $.getJSON( '/config', function (appConfig) {
         FHIR.oauth2.authorize({
-            "client_id": appConfig.ClientId,
+            "clientId": appConfig.ClientId,
             "scope"    : "openid profile",
-            "redirect_uri": redirectUri
+            "redirect_uri": redirectUri,
+            "clientSecret": appConfig.ClientSecret,
             });
     });
     </script>
